--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "The purpose of this functionality is to process requests from a traffic source that contain parameters",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yuriy Gershem",
@@ -15,5 +17,8 @@
     "fastify": "^5.3.2",
     "ioredis": "^5.6.1",
     "pg": "^8.15.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   }
 }
